# real_estate_website_scrapper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
output/: real_estate_developers.csv  real_estate_developers.xlsx  real_estate_developers_summary.csv
scraper/: __init__.py  category_parser.py  cleaner.py  company_parser.py  config.py  exporter 2.py  exporter.py  http_client.py  models.py  service.py
tests/: test_category_parser.py  test_cleaner.py  test_company_parser.py  test_exporter.py  test_http_client.py  test_service.py
tests/fixtures/: category_page.html  company_page.html
