[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spyur-real-estate-scraper"
version = "1.0.0"
description = "Deterministic public-directory scraper for Spyur real-estate developers"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
